--- a/app/pages/index.jade
+++ b/app/pages/index.jade
@@ -1,6 +1,9 @@
 extends /blocks/layout-default/layout-default
+include /blocks/wrapper-app/wrapper-app
 
 block head
 	- var pageTitle = 'CSSSR Project Template';
 
 block content
+	+wrapper-app
+
