redux js example

--- a/app/pages/index.jade
+++ b/app/pages/index.jade
@@ -6,3 +6,7 @@ block head
 
 block content
 	+wrapper-app
+
+		+b('input').trackInput(type="text")
+		+b('button').addTrack Add Track
+		+b('ul').list
