--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -5,4 +5,7 @@ import('helpers/svg-size')
 @import 'helpers/fonts'
 @import 'helpers/optimize'
 
+@import '../../node_modules/remodal/dist/remodal.css'
+@import '../../node_modules/remodal/dist/remodal-default-theme.css'
+
 import('../blocks/**/*')
